--- a/pj/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/pj/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
+        android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
         android:id="@+id/catalogFragment"
+        android:icon="@drawable/ic_catalog"
         android:title="Catalog" />
     <item
         android:id="@+id/cartFragment"
+        android:icon="@drawable/ic_cart"
         android:title="Cart" />
     <item
         android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
+
