--- a/pj/app/src/main/res/navigation/nav_graph.xml
+++ b/pj/app/src/main/res/navigation/nav_graph.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿﻿<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
@@ -54,12 +54,39 @@
     <fragment
         android:id="@+id/catalogFragment"
         android:name="com.example.bookstore.ui.fragments.CatalogFragment"
-        android:label="Catalog" />
+        android:label="Catalog">
+        <action
+            android:id="@+id/action_catalogFragment_to_bookDetailFragment"
+            app:destination="@id/bookDetailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/bookDetailFragment"
+        android:name="com.example.bookstore.ui.fragments.BookDetailFragment"
+        android:label="Book Details" />
 
     <fragment
         android:id="@+id/cartFragment"
         android:name="com.example.bookstore.ui.fragments.CartFragment"
-        android:label="Cart" />
+        android:label="Cart">
+        <action
+            android:id="@+id/action_cartFragment_to_checkoutFragment"
+            app:destination="@id/checkoutFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_catalogFragment"
+            app:destination="@id/catalogFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/checkoutFragment"
+        android:name="com.example.bookstore.ui.fragments.CheckoutFragment"
+        android:label="Checkout">
+        <action
+            android:id="@+id/action_checkoutFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/cartFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/profileFragment"
