--- a/pj/app/src/main/res/navigation/nav_graph.xml
+++ b/pj/app/src/main/res/navigation/nav_graph.xml
@@ -91,5 +91,33 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.bookstore.ui.fragments.ProfileFragment"
-        android:label="Profile" />
+        android:label="Profile">
+        <action
+            android:id="@+id/action_profileFragment_to_ordersFragment"
+            app:destination="@id/ordersFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.bookstore.ui.fragments.SearchFragment"
+        android:label="Search" />
+
+    <fragment
+        android:id="@+id/categoryFragment"
+        android:name="com.example.bookstore.ui.fragments.CategoryFragment"
+        android:label="Categories" />
+
+    <fragment
+        android:id="@+id/ordersFragment"
+        android:name="com.example.bookstore.ui.fragments.OrdersFragment"
+        android:label="My Orders">
+        <action
+            android:id="@+id/action_ordersFragment_to_orderDetailFragment"
+            app:destination="@id/orderDetailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/orderDetailFragment"
+        android:name="com.example.bookstore.ui.fragments.OrderDetailFragment"
+        android:label="Order Details" />
 </navigation>
