--- a/pj/app/src/main/res/layout/fragment_checkout.xml
+++ b/pj/app/src/main/res/layout/fragment_checkout.xml
@@ -62,7 +62,7 @@
                     android:textSize="14sp"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
-                    android:background="@drawable/book_placeholder"
+                    android:background="@color/white"
                     android:layout_marginEnd="8dp" />
 
                 <Button
