--- a/pj/app/src/main/res/navigation/nav_graph.xml
+++ b/pj/app/src/main/res/navigation/nav_graph.xml
@@ -1,4 +1,4 @@
-﻿﻿<?xml version="1.0" encoding="utf-8"?>
+﻿﻿﻿<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
@@ -82,8 +82,8 @@
         android:name="com.example.bookstore.ui.fragments.CheckoutFragment"
         android:label="Checkout">
         <action
-            android:id="@+id/action_checkoutFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
+            android:id="@+id/action_checkoutFragment_to_cartFragment"
+            app:destination="@id/cartFragment"
             app:popUpTo="@id/cartFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -95,7 +95,15 @@
         <action
             android:id="@+id/action_profileFragment_to_ordersFragment"
             app:destination="@id/ordersFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_addressFragment"
+            app:destination="@id/addressFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/addressFragment"
+        android:name="com.example.bookstore.ui.fragments.AddressFragment"
+        android:label="Manage Addresses" />
 
     <fragment
         android:id="@+id/searchFragment"
